try to fix spacing inside drop down

--- a/src/app/listing/listing.component.css
+++ b/src/app/listing/listing.component.css
@@ -53,3 +53,15 @@
 .btn-detail{
     width: 5%;
 }
+
+.mat-select-panel mat-option.mat-option {
+  margin: 1rem 0;
+  overflow: visible;
+  line-height: initial;
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  }
+
+  .mat-option-text.mat-option-text {
+  white-space: normal;
+  }
